force-app/main/default/objects/Apttus_Billing__CreditMemoTaxBreakup__c/Apttus_Billing__CreditMemoTaxBreakup__c.object-meta.xml
<CustomObject>
    <description>Represents the tax breakup for a Credit Memo (which is an aggregation of the Credit Memo Line Item Tax Breakups).</description>
    <label>Credit Memo Tax Breakup</label>
    <nameField>
        <displayFormat>CMTB-{00000000}</displayFormat>
        <label>Breakup Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Memo Tax Breakups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>