force-app/main/default/objects/Apttus_Billing__CreditMemoTaxBreakup__c/fields/Apttus_Billing__BreakupType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__BreakupType__c</fullName>
    <description>The tax breakup type</description>
    <inlineHelpText>The tax breakup type</inlineHelpText>
    <label>Breakup Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Detail</fullName>
            </value>
            <value>
                <fullName>Total</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>