force-app/main/default/objects/Apttus_Billing__CreditMemoTaxBreakup__c/fields/Apttus_Billing__CreditMemoId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__CreditMemoId__c</fullName>
    <description>ID of the associated Credit Memo</description>
    <inlineHelpText>ID of the associated Credit Memo</inlineHelpText>
    <label>Credit Memo</label>
    <referenceTo>Apttus_Billing__CreditMemo__c</referenceTo>
    <relationshipLabel>Credit Memo Tax Breakups</relationshipLabel>
    <relationshipName>CreditMemoTaxBreakups</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>